dropshot/tests/fail/bad_trait_only10.stderr
error: API trait `MyApi` must not be marked as `unsafe`
 --> tests/fail/bad_trait_only10.rs:8:1
  |
8 | unsafe trait MyApi {
  | ^^^^^^
